# legalscanner

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  enh_plan.txt  start.sh  stop.sh
docker/: api.Dockerfile  nginx.conf  ui.Dockerfile
legalscanner-api/: Cargo.toml
legalscanner-api/migrations/: 20250101000000_initial_schema.sql  20250102000000_add_git_token.sql  20250103000000_add_ecc_support.sql  20250104000000_add_semgrep_fields.sql  20250105000000_add_scanner_status.sql  20250106000000_add_risk_scoring.sql
legalscanner-api/semgrep-rules/: ecc-crypto-detection.yaml
legalscanner-api/src/: config.rs  error.rs  lib.rs  main.rs
legalscanner-api/src/api/: routes.rs
legalscanner-api/src/api/handlers/: api_keys.rs  health.rs  mod.rs  risk.rs  sbom.rs  scan_job.rs  scans.rs
legalscanner-api/src/api/middleware/: mod.rs
legalscanner-api/src/api/models/: mod.rs
legalscanner-api/src/db/: mod.rs
legalscanner-api/src/db/models/: api_key.rs  mod.rs  scan.rs  scan_result.rs
legalscanner-api/src/export/: mod.rs  spdx.rs
legalscanner-api/src/git/: clone.rs  mod.rs  workspace.rs
legalscanner-api/src/scanner/: mod.rs  traits.rs
legalscanner-api/src/scanner/fossology/: client.rs  mod.rs  parser.rs
legalscanner-api/src/scanner/semgrep/: client.rs  mod.rs  parser.rs
legalscanner-api/src/utils/: crypto.rs
legalscanner-ui/: index.html  package.json
legalscanner-ui/src/: App.vue
legalscanner-ui/src/api/: apiKeys.js  client.js  scans.js
legalscanner-ui/src/components/: ApiKeyManager.vue  ResultsViewer.vue  ScanForm.vue  ScanList.vue
legalscanner-ui/src/router/: index.js
legalscanner-ui/src/store/: auth.js  scans.js
legalscanner-ui/src/styles/: main.css
legalscanner-ui/src/views/: About.vue  Home.vue  ScanDetails.vue  Settings.vue
