[workspace]
members = ["legalscanner-api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Legal Scanner Team"]
license = "MIT"
repository = "https://github.com/yourusername/legalscanner"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid"] }

# Git operations
git2 = "0.19"

# Docker client
bollard = "0.17"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Regex
regex = "1.11"

# Hashing and crypto
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# SPDX/SBOM export
serde_yaml = "0.9"
